# agent-frameworks

./: .gitignore  README.md
ag2/: 0_sample_agent.py  1_agent_with_tools.py  2_structured_outputs.py  3_human_in_the_loop.py  4_multi_agent.py  README.md  requirements.txt  settings.py
agno/: 1_simple_agent.py  2_async.py  2_async_and_streaming.py  3_streaming.py  3_workflow_example.py  4_parallel_tool_calling.py  5_human_in_the_loop.py  6_workflow_example.py  README.md  requirements.txt
autogen/autogen-project/: .env.example  README.md  pyproject.toml
autogen/autogen-project/prompts/: prompt.txt  prompt10.txt  prompt30.txt
autogen/autogen-project/src/autogen_project/: agents.py  custom_agent.py  index.py  loader.py  main.py  settings.py
autogen/autogen-project/src/autogen_project/tools/: geometric_mean_tool.py  knowledge_base_search_tool.py
autogen/autogen-simple-examples/: README.md  pyproject.toml
autogen/autogen-simple-examples/src/autogen_simple_examples/: group-chat-with-rag.py  hello-world.py  nested-chats.py  parallelization-agentchat.py  parallelization-core.py
autogen_example/: .env.example  README.md  agents.py  async-human-input.py  group-chat-with-rag.py  hello-world.py  pyproject.toml  requirements.txt  team.py
autogen_example/my-app/: autogen.db
autogen_example/my-app/alembic/versions/: 93eeabc64f48_initial_schema.py
autogen_example/src/autogen_example/: async-human-input.py  hello-world.py  nested-chat.py  nested-chats.py  parallelization-agentchat.py  parallelization-core.py  settings.py
chatbot_example_using_crewai/: README.md  pyproject.toml
chatbot_example_using_crewai/prompts/: prompt2.txt  prompt3.txt
chatbot_example_using_crewai/src/chatbot/: crew.py  main.py
chatbot_example_using_crewai/src/chatbot/config/: tasks.yaml
crewai/chatbot-example/: .env.example  .pdm-python  README.md  pyproject.toml
crewai/chatbot-example/knowledge-base/: user1.md
crewai/chatbot-example/prompts/: prompt1.txt
crewai/chatbot-example/src/chatbot/: crew.py
crewai/chatbot-example/src/chatbot/config/: agents.yaml
crewai/crewai-project/: .env.example  README.md  pyproject.toml
crewai/crewai-project/knowledge-base/: user2.md
crewai/crewai-project/prompts/: prompt100.txt  prompt50.txt
crewai/crewai-project/src/crewai_project/: crew.py  main.py  settings.py
crewai/crewai-project/src/crewai_project/config/: agents.yaml
crewai/crewai-simple-examples/: .env.example
crewai_example/: agents.py  crew-example-human.py  crew-example.py  settings.py
google-adk/: 0_hello_world.py  1_tools.py  2_built_in_tools.py  3_agents_as_tools.py  README.md  n_agent_engine.py  n_callbacks.py  n_multi_agent_systems.py  n_observability.py  n_rag.py  n_session_and_memory.py  settings.py  utils.py
langgraph/langgraph-project/: .env.example  README.md  pyproject.toml
langgraph/langgraph-project/knowledge-base/: user1.md  user2.md
langgraph/langgraph-project/prompts/: general_question_prompt.txt  more_info_prompt.txt  rag_prompt.txt
langgraph/langgraph-project/src/langgraph_project/: main.py  settings.py  state.py  utils.py
langgraph/langgraph-project/src/langgraph_project/agents/: agent.py  agents.py  configuration.py  prompts.py
langgraph/langgraph-project/src/langgraph_project/tools/: __init__.py  ask_more_information_tool.py  respond_general_info_tool.py  retriever_tool.py  routing_tool.py
langgraph/langgraph-project/src/langgraph_project/vector_store/: index.py  loader.py
langgraph_example/: .env.example  README.md  customer-support.ipynb  requirements.txt
llama-index/: .env.example  README.md  router_engine.py  settings.py  tool_calling.py
openai-agents-sdk/: .env.example  0_hello_world.py  1_tools_and_metrics.py  2_structured_outputs.py  3_parallelization_in_workflow.py  4_handoffs_and_streaming.py  5_agents_as_tools.py  6_output_guardrails.py  7_llm_as_a_judge.py  8_tracing.py  README.md  requirements.txt
performance-testing/autogen-testing/: .env.example  README.md  pyproject.toml
performance-testing/autogen-testing/prompts/: prompt100.txt  prompt10_multiple.txt  prompt30.txt  prompt50.txt
performance-testing/autogen-testing/src/autogen_testing/: agents.py  custom_agent.py  index.py  loader.py  main.py  settings.py
performance-testing/autogen-testing/src/autogen_testing/tools/: geometric_mean_tool.py  knowledge_base_search_tool.py
performance-testing/crewai-testing/: pyproject.toml
performance-testing/crewai-testing/prompts/: prompt10.txt
performance-testing/crewai-testing/src/crewai_testing/: crew.py  main.py  settings.py
performance-testing/crewai-testing/src/crewai_testing/config/: agents.yaml  tasks.yaml
performance-testing/crewai-testing/src/crewai_testing/tools/: geometric_mean_tool.py
pydantic-ai/pydantic-ai-examples/: .env.example  pyproject.toml
pydantic-ai/pydantic-ai-examples/src/pydantic_ai_examples/: 1_tools_and_dependency_injection.py  2_parallel_tool_calling.py  3_programmatic_handoff.py  4_graph_gen_ai.py  graph_gen_ai.py  parallel_tool_calling.py  programmatic_handoff.py  settings.py  tools_and_dependency_injection.py
smolagents/smolagents-simple-examples/: .env.example  README.md  requirements.txt  simple-agent.py
smolagents_example/: multi-agent-simple.py  multi-agent.py  settings.py
smolagents_example/outputs/: blog_post.md
study-agents-differences/: .env.example  README.md  agent-ui.py  agno_agent.py  agno_rag_api_agent.py  langgraph_agent.py  langgraph_rag_api_agent.py  llama_index_agent.py  llama_index_fc_agent.py  llama_index_rag_api_agent.py  openai_agent.py  prompts.py  pydantic_ai_agent.py  requirements.txt  settings.py  utils.py
study-agents-differences/knowledge_base/cl_matches/: matches-1.md  matches-2.md
study-agents-differences/shared_functions/: __init__.py  base_module.py  f1_api.py  generic_calls.py  metro_api.py
study-agents-differences/tests/: test100_agno_api.txt  test100_agno_rag.txt  test100_langgraph_api.txt  test100_langgraph_rag.txt  test100_llamaindex_api.txt  test100_llamaindex_rag.txt
