[project]
name = "autogen_simple_examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "martimfasantos", email = "72747170+martimfasantos@users.noreply.github.com"},
]

requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["autogen-agentchat>=0.4.4", "autogen-ext[openai]>=0.4.4", "pydantic-settings>=2.7.1", "python-dotenv>=1.0.1", "dotenv>=0.0.5", "nest-asyncio>=1.6.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
async-human-input = "python3 src/autogen_simple_examples/async-human-input.py"
group-chat = "python3 src/autogen_simple_examples/group-chat-with-tag.py"
hello-world = "python3 src/autogen_simple_examples/hello-world.py"
nested-chats = "python3 src/autogen_simple_examples/nested-chats.py"
parallel-chat = "python3 src/autogen_simple_examples/parallelization-agentchat.py"
parallel-core = "python3 src/autogen_simple_examples/parallelization-core.py"
