[project]
name = "autogen_testing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "martimfasantos", email = "martimfasantos@gmail.com"},
]
dependencies = ["fastapi>=0.115.7", "autogen>=0.1.1", "autogen-agentchat>=0.4.3", "autogen-core>=0.4.3", "uvicorn>=0.34.0", "numpy>=2.2.2", "tiktoken>=0.8.0", "pydantic-settings>=2.7.1", "autogen-ext[openai]>=0.4.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
autogen = "python3 src/autogen_testing/main.py"
